Fix dropdown closed bug and z-index for homepage

--- a/src/summoner-app/home.css
+++ b/src/summoner-app/home.css
@@ -10,7 +10,6 @@
   }
 
   .searchbar-group {
-    z-index: -1;
     overflow: visible;
   }
   
